# LiveQuest

./: .env.example  .gitignore  README.md  docker-compose.yml  manifest.json  package-lock.json  popup.html  popup.js
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  scoring.py
backend/app/graph/: db.py  models.py  schema.cypher
backend/tests/: test_graph_db.py  test_health.py  test_scoring.py
deeppromptor-extension/: content.js  manifest.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
legacy/: ask-claude-debug.js  background.js  content.js  list-models.js  package.json  server.js  server.js.backup  server.js.bak  test-extension.sh
legacy/deeppromptor-extension/: background.js  popup.html  popup.js
